--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="slider">
             <h2  > Portfolio (Proximamente)</h2>
             <ul>
-              <li>CV </li>
+              <li> <a href="https://marianoesteveztec.github.io/Rompecabezas/">Romprecabezas</a> </li>
               <li>Movie vs Movie </li>
               <li>Mapa Interactivo</li>
               <li>¿Qué quieres ver hoy?</li>
