--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2  > Portfolio (Proximamente)</h2>
             <ul>
               <li> <a href="https://marianoesteveztec.github.io/Rompecabezas/">Rompecabezas</a> </li>
-              <li>Movie vs Movie </li>
+                <li> <a href="https://marianoesteveztec.github.io/pixelart/">Pixel Art </a></li>
               <li>Mapa Interactivo</li>
               <li>¿Qué quieres ver hoy?</li>
             </ul>
