--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
           <div class="slider">
             <h2  > Portfolio (Proximamente)</h2>
             <ul>
-              <li> <a href="https://marianoesteveztec.github.io/Rompecabezas/">Rompecabezas</a> </li>
-                <li> <a href="https://marianoesteveztec.github.io/pixelart/">Pixel Art </a></li>
+              <li> <a href="https://marianoesteveztec.github.io/Rompecabeza/">Rompecabezas</a> </li>
+              <li> <a href="https://marianoesteveztec.github.io/pixelart/">Pixel Art </a></li>
+              <li> <a href="https://marianoesteveztec.github.io/ciudad-zombie/">Ciudad Zombie </a></li>
               <li>Mapa Interactivo</li>
               <li>¿Qué quieres ver hoy?</li>
             </ul>
