--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <li> <a href="https://marianoesteveztec.github.io/pixelart/">Pixel Art </a></li>
               <li> <a href="https://marianoesteveztec.github.io/ciudad-zombie/">Ciudad Zombie </a></li>
                 <li> <a href="https://marianoesteveztec.github.io/Encuestados/">Encuestados</a></li>
-              <li>Mapa Interactivo</li>
+              <li> <a href="https://marianoesteveztec.github.io/mapa-interactivo/">Mapa Interactivo</li>
               <li>¿Qué quieres ver hoy?</li>
             </ul>
           </div>
