--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <div class="componente" id="presentacion">
         <h2  > Quién soy </h2>
         <h1> Mariano Estevez </h1>
-        <h3> Licenciado en Informática </h3>
+        <h3> Ingeniero en Informática </h3>
 
         <ul id="datos">
             <li>Nombre: Mariano Estevez</li>
             <li>Nacionalidad: Argentina</li>
-            <li>Domicilio: 25 de Mayo 936 - Esquel - Chubut</li>
+            <li>Domicilio: Miguens 241 - Esquel - Chubut</li>
             <li>Fecha de nacimiento: 17/08/1990</li>
             <li>Telefono: +54 2945 15418785</li>
             <li>Email: Marianoesteveztec@gmail.com</li>
@@ -50,17 +50,17 @@
             <li>  Visualizaciones</li>
           </ul>
           <h3> Referente técnico escolar </h3>
-          <p>Octubre 2017 - Actualidad</p>
+          <p>Octubre 2017 - Junio 2018</p>
           <p>Acompañamiento de la infraestructura tecnológica y del equipamiento en los establecimientos educativos. Tiene la responsabilidad de producir soluciones informáticas y tecnológicas, supervisar, mantener y hacer funcionar la Plataforma tecnológica institucional (piso tecnológico): servidor, redes, netbooks, de modo que esté operativa para su uso pedagógico por parte de los docentes y alumnos.</p>
         </div>
 
         <div class="componente" id="formacion" >
           <h2 > Formación </h2>
           <h3>Ingeniería en Informática</h3>
-          <p> Universidad Argentina de la Empresa, 2011 – Actualidad</p>
-          <h3> Licenciatura en Informática</h3>
+          <p>Universidad Argentina de la Empresa, 2011 – 2018</p>
           <p>Universidad Argentina de la Empresa, 2011 – 2017</p>
-          <p>Todas las materias aprobadas</p>
+          <p>Desarrollador Web Full Stack, 2017 – 2018</p>
+         
 
         </div>
 
@@ -85,14 +85,13 @@
 
         <div class="componente" id="portfolio" >
           <div class="slider">
-            <h2  > Portfolio (Proximamente)</h2>
+            <h2  > Portfolio </h2>
             <ul>
               <li> <a href="https://marianoesteveztec.github.io/Rompecabeza/">Rompecabezas</a> </li>
               <li> <a href="https://marianoesteveztec.github.io/pixelart/">Pixel Art </a></li>
               <li> <a href="https://marianoesteveztec.github.io/ciudad-zombie/">Ciudad Zombie </a></li>
-                <li> <a href="https://marianoesteveztec.github.io/Encuestados/">Encuestados</a></li>
+              <li> <a href="https://marianoesteveztec.github.io/Encuestados/">Encuestados</a></li>
               <li> <a href="https://marianoesteveztec.github.io/mapa-interactivo/">Mapa Interactivo</li>
-              <li>¿Qué quieres ver hoy?</li>
             </ul>
           </div>
 
