--- a/index.html
+++ b/index.html
@@ -56,10 +56,13 @@
 
         <div class="componente" id="formacion" >
           <h2 > Formación </h2>
+          <h3>Desarrollador Web Full Stack</h3>
+          <p>Acamica, 2017 – 2018</p>
           <h3>Ingeniería en Informática</h3>
           <p>Universidad Argentina de la Empresa, 2011 – 2018</p>
+          <h3>Licenciatura en Informática</h3>
           <p>Universidad Argentina de la Empresa, 2011 – 2017</p>
-          <p>Desarrollador Web Full Stack, 2017 – 2018</p>
+
          
 
         </div>
